tests/ui/issues/issue-23253.rs
enum Foo { Bar }

fn main() {
    Foo::Bar.a;
    //~^ ERROR no field `a` on type `Foo`
}
